# gcpm

./: .gitattributes  .gitignore  .travis.yaml  .travis.yml  .travis_enc.tar.enc  LICENSE  README.md  bandit.html  manage.sh  pyproject.toml  shutdown_test.sh  startup_test.sh  test.sh
.git-crypt/keys/default/0/: A346A9BB2E23AE2A51B1CA079767DC0266A89A32.gpg
etc/: gcpm.conf
etc/logrotate.d/: gcpm.conf
etc/rsyslog.d/: gcpm.conf
scripts/: check_gcloud.sh  install.sh  make_image.sh  make_manager.sh  make_template.sh  startup_worker.sh  test_image.sh  uninstall.sh
src/gcpm/: __init__.py  __main__.py  cli.py  condor.py  core.py  files.py  gce.py  gcpm.py  gcs.py  machine.py  service.py  utils.py
tests/: conftest.py  test_cli.py  test_files.py  test_gce.py  test_gcpm.py  test_gcs.py  test_service.py  test_utils.py
tests/data/: gcpm.yaml  gcpm.yml  gcpm_oauth.yaml  gcpm_oauth.yml  service_account.json
usr/lib/systemd/system/: gcpm.service
