[tool.poetry]
name = "gcpm"
version = "0.1.0"
description = "HTCondor pool manager for Google Cloud Platform."
repository = "https://github.com/mickaneda/gcp_condor_pool_manager"
homepage = "https://github.com/mickaneda/gcp_condor_pool_manager"
authors = ["Michiru Kaneda <Michiru.Kaneda@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
keywords = []

[tool.poetry.dependencies]
python = "^2.7 || ^3.5"
fire = "^0.1.3"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
gcpm = "gcpm.gcpm:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
