[tool.poetry]
name = "gcpm"
version = "0.3.1"
description = "Google Cloud Platform Condor Pool Manager"
repository = "https://github.com/rcmdnk/gcpm"
homepage = "https://github.com/rcmdnk/gcpm"
authors = ["rcmdnk <rcmdnk@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
keywords = []

[tool.poetry.dependencies]
python = "^2.7 || ^3.4"
fire = "^0.4.0"
google-api-python-client = "^2.33"
google-auth-httplib2 = "^0.1.0"
google-auth = "^2.3"
oauth2client = "^4.1"
"ruamel.yaml" = "^0.17.0"
bandit = "^1.5"
htcondor = "^10.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = "^3.0"

[tool.poetry.scripts]
gcpm = "gcpm:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
